--- a/flaskr/templates/blog/calendar.html
+++ b/flaskr/templates/blog/calendar.html
@@ -5,13 +5,13 @@
 {% endblock %}
 
 {% block content %}
-  <form method="post">
+  <!-- <form method="post">
     <label for="title">Date</label>
     <input name="date" id="date" value="{{ request.form['date'] }}" required>
     <label for="time">Time</label>
     <input name="time" id="time" value="{{ request.form['time'] }}" required>
     <input type="submit" value="Save">
-  </form>
+  </form> -->
 
 
   {% from "formhelpers.html" import render_field %}
