--- a/flaskr/templates/blog/calendar.html
+++ b/flaskr/templates/blog/calendar.html
@@ -20,6 +20,7 @@
       <dl>
         {{ render_field(form.date, value=date_placeholder) }}
         {{ render_field(form.time, value=time_placeholder) }}
+        {{ render_field(form.body, value=body_placeholder) }}
       </dl>
       <p><input type=submit value=Save>
     </form>
