--- a/flaskr/templates/blog/update.html
+++ b/flaskr/templates/blog/update.html
@@ -1,18 +1,19 @@
 {% extends 'base.html' %}
 
 {% block header %}
-  <h1>{% block title %}Edit "{{ post['title'] }}"{% endblock %}</h1>
+  <h1>{% block title %}Edit{% endblock %}</h1>
 {% endblock %}
 
 {% block content %}
-  <form method="post">
-    <label for="title">Title</label>
-    <input name="title" id="title"
-      value="{{ request.form['title'] or post['title'] }}" required>
-    <label for="body">Body</label>
-    <textarea name="body" id="body">{{ request.form['body'] or post['body'] }}</textarea>
-    <input type="submit" value="Save">
-  </form>
+{% from "formhelpers.html" import render_field %}
+<form method=post>
+  <dl>
+    {{ render_field(form.date, value=last_date) }}
+    {{ render_field(form.time, value=last_time) }}
+    {{ render_field(form.body, value=last_body) }}
+  </dl>
+  <p><input type=submit value=Resubmit>
+</form>
   <hr>
   <form action="{{ url_for('blog.delete', id=post['id']) }}" method="post">
     <input class="danger" type="submit" value="Delete" onclick="return confirm('Are you sure?');">
